--- a/styles/mandar.css
+++ b/styles/mandar.css
@@ -1606,6 +1606,7 @@ img {
   text-align: center;
   background: none;
   width: 100%;
+  color: #000;
 }
 
 .starwarsffg .dice-pool-dialog .pool-text {
